DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    Declare Function dmc_ltc_set_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16, ByVal ltc_mode As UInt16, ByVal ltc_logic As UInt16, ByVal filter As Double) As Int16    '设置LTC信号
    Declare Function dmc_ltc_get_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16, ByRef ltc_mode As UInt16, ByRef ltc_logic As UInt16, ByRef filter As Double) As Int16    '设置LTC信号
    Declare Function dmc_ltc_set_source Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16, ByVal axis As UInt16, ByVal ltc_source As UInt16) As Int16
    Declare Function dmc_ltc_get_source Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16, ByVal axis As UInt16, ByRef ltc_source As UInt16) As Int16
    Declare Function dmc_ltc_reset Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16) As Integer
    Declare Function dmc_ltc_get_number Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16, ByVal axis As UInt16, ByRef number As UInt16) As Int16
    Declare Function dmc_ltc_get_value_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal latch As UInt16, ByVal axis As UInt16, ByRef Value As Double) As Int16
    '单轴低速位置比较
    ' <summary>
    ' 设置单轴低速位置比较器配置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="cmp_source">比较源：0-指令位置，1-反馈位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_set_config Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal cmp_source As UInt16) As Int16       '配置比较器
    ' <summary>
    ' 读取单轴低速位置比较器配置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="cmp_source">比较源：0-指令位置，1-反馈位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_config Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef cmp_source As UInt16) As Int16   '读取配置比较器
    ' <summary>
    ' 清除位置比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_clear_points Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16          '清除所有比较点
    ' <summary>
    ' 添加比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="pos">比较位置</param>
    ' <param name="dir">比较方向：0：小于等于，1：大于等于0   比较位置与当前位置比较</param>
    ' <param name="action">触发动作功能</param>
    ' <param name="actpara">触发动作参数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_add_point Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal pos As Int32, ByVal dir As UInt16, ByVal action As UInt16, ByVal actpara As Int32) As Int16    '添加比较点
    ' <summary>
    ' 读取当前比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="pos">比较位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_current_point Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef pos As Int32) As Int16    '读取当前比较点
    ' <summary>
    ' 读取已比较点数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="pointNum">已比较点数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_points_runned Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef pointNum As Int32) As Int16       '查询已经比较过的点
    ' <summary>
    ' 读取剩余比较空间
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="pointNum">剩余比较空间</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_points_remained Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef pointNum As Int32) As Int16     '查询可以加入的比较点数量
    '二维低速位置比较
    ' <summary>
    ' 设置二维比较器配置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="cmp_source">比较源：0-指令位置，1-反馈位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_set_config_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal enable As UInt16, ByVal cmp_source As UInt16) As Int16           '配置比较器
    ' <summary>
    ' 读取二维比较器配置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="cmp_source">比较源：0-指令位置，1-反馈位置</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_config_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef enable As UInt16, ByRef cmp_source As UInt16) As Int16           '读取配置比较器
    ' <summary>
    ' 清除二维比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_clear_points_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16) As Int16          '清除所有比较点
    ' <summary>
    ' 添加二维比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="pos">比较位置（xpos,ypos)</param>
    ' <param name="dir">比较方向（x_dir,y_dir)</param>
    ' <param name="action">触发动作功能</param>
    ' <param name="actpara">触发动作参数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_add_point_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis() As UInt16, ByVal pos() As Int32, ByVal dir() As UInt16, ByVal action As UInt16, ByVal actpara As Int32) As Int16          '添加两轴位置比较点
    Declare Function dmc_compare_add_point_extern_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis() As UInt16, ByVal pos() As Double, ByVal dir() As UInt16, ByVal action As UInt16, ByVal actpara As Int32) As Int16          '添加两轴位置比较点

    ' <summary>
    ' 读取当前比较位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="pos">比较位置（xpos,ypos)</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_current_point_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal pos() As Int32) As Int16    '读取当前比较点
    Declare Function dmc_compare_get_current_point_extern_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal pos() As Double) As Int16    '读取当前比较点
    ' <summary>
    ' 读取已比较点数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="pointNum">已比较点数</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_points_runned_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef pointNum As Int32) As Int16       '查询已经比较过的点
    ' <summary>
    ' 读取剩余比较空间
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="pointNum">剩余比较空间</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_compare_get_points_remained_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef pointNum As Int32) As Int16      '查询可以加入的二维比较点数量

    Declare Function dmc_compare_set_config_multi Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal queue As UInt16, ByVal enable As UInt16, ByVal axis As UInt16, ByVal cmp_source As UInt16) As Int16       '配置比较器
    Declare Function dmc_compare_get_config_multi Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal queue As UInt16, ByRef enable As UInt16, ByRef axis As UInt16, ByRef cmp_source As UInt16) As Int16
    Declare Function dmc_compare_add_point_multi Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal cmp As UInt16, ByVal pos As Int32, ByVal Dir As UInt16, ByVal action As UInt16, ByVal actpara As Int32, ByVal times As Double) As Int16    '添加比较点

    '单轴高速位置比较函数
    ' <summary>
    ' 设置高速比较模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="cmp_mode">比较模式：0-禁止，1-等于，2-小于，3-大于，4-队列，5-线性</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_set_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal cmp_mode As UInt16) As Int16
    ' <summary>
    ' 读取高速比较模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="hcmp">高速比较器号：0-3</param>
    ' <param name="cmp_mode">比较模式：0-禁止，1-等于，2-小于，3-大于，4-队列，5-线性</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_hcmp_get_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef cmp_mode As UInt16) As Int16

    Declare Function dmc_hcmp_set_config_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByVal axis As UInt16, ByVal cmp_source As UInt16, ByVal cmp_logic As UInt16, ByVal cmp_mode As UInt16, ByVal Dist As Int32, ByVal time As Int32) As Int16
    Declare Function dmc_hcmp_get_config_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal hcmp As UInt16, ByRef axis As UInt16, ByRef cmp_source As UInt16, ByRef cmp_logic As UInt16, ByRef cmp_mode As UInt16, ByRef Dist As Int32, ByRef time As Int32) As Int16
